--- a/src/app/balance/balance.component.scss
+++ b/src/app/balance/balance.component.scss
@@ -66,7 +66,7 @@
 
     .col-2 {
       @include sm {
-        padding: 0 1.5rem;
+        padding-left: 1.5rem;
       }
 
       .productivity-box {
