Fix circles display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
 <ga-statistics></ga-statistics>
 <ga-management></ga-management>
 <ga-projects></ga-projects>
-<!-- <ga-contact></ga-contact> -->
+<ga-contact></ga-contact>
