--- a/src/app/management/circles/circles.component.html
+++ b/src/app/management/circles/circles.component.html
@@ -1,42 +1,39 @@
-<div class="row bg-pu">
-  <div class="col-xs-12 col-sm-6">
-    <div class="container">
-      <div class="circle bg-pk">
-        <div class="content">
-          <p class="number">302</p>
-          <p>PROYECTOS</p>
-        </div>
+<div class="row bg-purple">
+  <div class="container col-xs-12 col-sm-6">
+    <div class="circle bg-pink">
+      <div class="circle-content">
+        <p class="number">302</p>
+        <p>PROYECTOS</p>
       </div>
-      <div class="circle bg-lp">
-        <div class="content">
-          <p class="number">168</p>
-          <p>PROYECTOS</p>
-          <p>DE RESOLUCIÓN</p>
-        </div>
+    </div>
+    <div class="circle bg-light-blue">
+      <div class="circle-content">
+        <p class="number">168</p>
+        <p>PROYECTOS</p>
+        <p>DE RESOLUCIÓN</p>
       </div>
-      <div class="circle bg-lb">
-        <div class="content">
-          <p class="number">57</p>
-          <p>PROYECTOS DE</p>
-          <p>LEY PRESENTADOS</p>
-        </div>
+    </div>
+    <div class="circle bg-light-blue">
+      <div class="circle-content">
+        <p class="number">57</p>
+        <p>PROYECTOS DE</p>
+        <p>LEY PRESENTADOS</p>
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-6">
-    <div class="container">
-      <div class="circle bg-lb">
-        <div class="content">
-          <p class="number">19</p>
-          <p>LEYES APROBADAS</p>
-        </div>
+
+  <div class="container col-xs-12 col-sm-6">
+    <div class="circle bg-light-blue">
+      <div class="circle-content">
+        <p class="number">19</p>
+        <p>LEYES APROBADAS</p>
       </div>
-      <div class="circle bg-pk">
-        <div class="content">
-          <p class="number">77</p>
-          <p>PROYECTOS</p>
-          <p>DE DECLARACIÓN</p>
-        </div>
+    </div>
+    <div class="circle bg-pink">
+      <div class="circle-content">
+        <p class="number">77</p>
+        <p>PROYECTOS</p>
+        <p>DE DECLARACIÓN</p>
       </div>
     </div>
   </div>
