--- a/src/app/management/grid/grid.component.html
+++ b/src/app/management/grid/grid.component.html
@@ -1,9 +1,9 @@
 <div class="row table">
   <div class="col-xs-2 col-md-2">  </div>
-  <div class="col-xs-5 col-md-5 bl">
+  <div class="col-xs-5 col-md-5 blue">
     <p>PROYECTOS DE LEY</p>
   </div>
-  <div class="col-xs-5 col-md-5 pk">
+  <div class="col-xs-5 col-md-5 pink">
     <p>PROYECTOS APROBADOS</p>
   </div>
 </div>
@@ -12,20 +12,20 @@
   <div class="col-xs-2 col-md-2">  </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl">
+      <div class="col-xs-6 col-md-6 blue">
         <p>DIPUTADO</p>
       </div>
-      <div class="col-xs-6 col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pink">
         <p>SENADOR</p>
       </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl">
+      <div class="col-xs-6 col-md-6 blue">
         <p>DIPUTADO</p>
       </div>
-      <div class="col-xs-6 col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pink">
         <p>SENADOR</p>
       </div>
     </div>
@@ -33,19 +33,19 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-lp wh space">
+  <div class="col-xs-2 col-md-2 bg-light-purple white space">
     <p>2010</p>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-lb space">
-      <div class="col-xs-6 col-md-6 wh">
+    <div class="row bg-light-blue space">
+      <div class="col-xs-6 col-md-6 white">
         <p>1</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-pk empty space">
+    <div class="row bg-pink empty space">
       <div class="col-xs-6 col-md-6">  </div>
       <div class="col-xs-6 col-md-6">  </div>
     </div>
@@ -53,12 +53,12 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-pu wh space">
+  <div class="col-xs-2 col-md-2 bg-purple white space">
     <p>2011</p>
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>4</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
@@ -66,7 +66,7 @@
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>3</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
@@ -75,20 +75,20 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-lp wh space">
+  <div class="col-xs-2 col-md-2 bg-light-purple white space">
     <p>2012</p>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-lb space">
-      <div class="col-xs-6 col-md-6 wh">
+    <div class="row bg-light-blue space">
+      <div class="col-xs-6 col-md-6 white">
         <p>6</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-pk space">
-      <div class="col-xs-6 col-md-6 wh">
+    <div class="row bg-pink space">
+      <div class="col-xs-6 col-md-6 white">
         <p>5</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
@@ -97,12 +97,12 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-pu wh space">
+  <div class="col-xs-2 col-md-2 bg-purple white space">
     <p>2013</p>
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>2</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
@@ -110,7 +110,7 @@
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
          <p>1</p>
       </div>
       <div class="col-xs-6 col-md-6">  </div>
@@ -119,25 +119,25 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-lp wh space">
+  <div class="col-xs-2 col-md-2 bg-light-purple white space">
     <p>2014</p>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-lb space">
-      <div class="col-xs-6 col-md-6 wh">
+    <div class="row bg-light-blue space">
+      <div class="col-xs-6 col-md-6 white">
         <p>1</p>
       </div>
-      <div class="col-xs-6 col-md-6 wh">
+      <div class="col-xs-6 col-md-6 white">
         <p>6</p>
       </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-pk space">
-      <div class="col-xs-6 col-md-6 wh">
+    <div class="row bg-pink space">
+      <div class="col-xs-6 col-md-6 white">
         <p>1</p>
       </div>
-      <div class="col-xs-6 col-md-6 wh">
+      <div class="col-xs-6 col-md-6 white">
         <p>2</p>
       </div>
     </div>
@@ -145,13 +145,13 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-pu wh space">
+  <div class="col-xs-2 col-md-2 bg-purple white space">
     <p>2015</p>
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
       <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>11</p>
       </div>
     </div>
@@ -159,7 +159,7 @@
   <div class="col-xs-5 col-md-5">
     <div class="row">
       <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>3</p>
       </div>
     </div>
@@ -167,21 +167,21 @@
 </div>
 
 <div class="row table">
-  <div class="col-xs-2 col-md-2 bg-lp wh space">
+  <div class="col-xs-2 col-md-2 bg-light-purple white space">
     <p>2016</p>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-lb space">
+    <div class="row bg-light-blue space">
       <div class="col-xs-6col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 wh">
+      <div class="col-xs-6 col-md-6 white">
         <p>24</p>
       </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
-    <div class="row bg-pk space">
+    <div class="row bg-pink space">
       <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 wh">
+      <div class="col-xs-6 col-md-6 white">
         <p>4</p>
       </div>
     </div>
@@ -192,28 +192,28 @@
   <div class="col-xs-2 col-md-2">  </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>14</p>
       </div>
-      <div class="col-xs-6 col-md-6 bl space">
+      <div class="col-xs-6 col-md-6 blue space">
         <p>41</p>
       </div>
     </div>
   </div>
   <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-xs-6 col-md-6 pk space">
+      <div class="col-xs-6 col-md-6 pink space">
         <p>10</p>
       </div>
-      <div class="col-xs-6 col-md-6 pk space">
+      <div class="col-xs-6 col-md-6 pink space">
         <p>9</p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row table wh">
-  <div class="col-xs-6 col-md-6 bg-lb">
+<div class="row table white">
+  <div class="col-xs-6 col-md-6 bg-light-blue">
     <div class="row">
       <div class="col-xs-4 col-md-4 number">
         <p>55</p>
@@ -224,7 +224,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-6 col-md-6 bg-pk">
+  <div class="col-xs-6 col-md-6 bg-pink">
     <div class="row">
       <div class="col-xs-4 col-md-4 number">
         <p>19</p>
