--- a/src/app/management/circles/circles.component.scss
+++ b/src/app/management/circles/circles.component.scss
@@ -5,30 +5,36 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   align-items: center;
   justify-content: center;
   align-content: center;
+  padding: 2rem 0;
 
 }
 .circle{
+  display: flex;
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   align-items: center;
   align-content: center;
   justify-content: center;
   margin: 10px 0px;
-  .content{
+
+  .circle-content{
     text-align: center;
-    padding-top: 75px;
+    padding: 0 1rem;
+    /* padding-top: 75px; */
     p{
      color: $white;
-     font-size: 1.5rem;
+     font-size: 1rem;
+     text-align: left;
+     line-height: 1;
     }
     .number{
       font-weight: bold;
-      font-size: 3rem;
+      font-size: 2rem;
     }
   }
 
