--- a/src/app/management/grid/grid.component.html
+++ b/src/app/management/grid/grid.component.html
@@ -1,238 +1,241 @@
-<div class="row table">
-  <div class="col-xs-2 col-md-2">  </div>
-  <div class="col-xs-5 col-md-5 blue">
-    <p>PROYECTOS DE LEY</p>
+<div class="table">
+  <div class="row">
+    <div class="col-xs-2 col-md-2">  </div>
+    <div class="col-xs-5 col-md-5 blue">
+      <p class="table-title">PROYECTOS DE LEY</p>
+    </div>
+    <div class="col-xs-5 col-md-5 pink">
+      <p class="table-title">PROYECTOS APROBADOS</p>
+    </div>
   </div>
-  <div class="col-xs-5 col-md-5 pink">
-    <p>PROYECTOS APROBADOS</p>
-  </div>
-</div>
 
-<div class="row table space">
-  <div class="col-xs-2 col-md-2">  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue">
-        <p>DIPUTADO</p>
+  <div class="row space">
+    <div class="col-xs-2 col-md-2">  </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue">
+          <p class="table-subtitle">DIPUTADO</p>
+        </div>
+        <div class="col-xs-6 col-md-6 pink">
+          <p class="table-subtitle">SENADOR</p>
+        </div>
       </div>
-      <div class="col-xs-6 col-md-6 pink">
-        <p>SENADOR</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue">
+          <p class="table-subtitle">DIPUTADO</p>
+        </div>
+        <div class="col-xs-6 col-md-6 pink">
+          <p class="table-subtitle">SENADOR</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue">
-        <p>DIPUTADO</p>
-      </div>
-      <div class="col-xs-6 col-md-6 pink">
-        <p>SENADOR</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-light-purple white space">
-    <p>2010</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-light-blue space">
-      <div class="col-xs-6 col-md-6 white">
-        <p>1</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-light-purple white space">
+      <p>2010</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-light-blue space">
+        <div class="col-xs-6 col-md-6 white">
+          <p>1</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
       </div>
-      <div class="col-xs-6 col-md-6">  </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-pink empty space">
+        <div class="col-xs-6 col-md-6">  </div>
+        <div class="col-xs-6 col-md-6">  </div>
+      </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-pink empty space">
-      <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6">  </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-purple white space">
-    <p>2011</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>4</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-purple white space">
+      <p>2011</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>4</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
       </div>
-      <div class="col-xs-6 col-md-6">  </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>3</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
+      </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>3</p>
-      </div>
-      <div class="col-xs-6 col-md-6">  </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-light-purple white space">
-    <p>2012</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-light-blue space">
-      <div class="col-xs-6 col-md-6 white">
-        <p>6</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-light-purple white space">
+      <p>2012</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-light-blue space">
+        <div class="col-xs-6 col-md-6 white">
+          <p>6</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
       </div>
-      <div class="col-xs-6 col-md-6">  </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-pink space">
+        <div class="col-xs-6 col-md-6 white">
+          <p>5</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
+      </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-pink space">
-      <div class="col-xs-6 col-md-6 white">
-        <p>5</p>
-      </div>
-      <div class="col-xs-6 col-md-6">  </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-purple white space">
-    <p>2013</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>2</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-purple white space">
+      <p>2013</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>2</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
       </div>
-      <div class="col-xs-6 col-md-6">  </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>1</p>
+        </div>
+        <div class="col-xs-6 col-md-6">  </div>
+      </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue space">
-         <p>1</p>
-      </div>
-      <div class="col-xs-6 col-md-6">  </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-light-purple white space">
-    <p>2014</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-light-blue space">
-      <div class="col-xs-6 col-md-6 white">
-        <p>1</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-light-purple white space">
+      <p>2014</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-light-blue space">
+        <div class="col-xs-6 col-md-6 white">
+          <p>1</p>
+        </div>
+        <div class="col-xs-6 col-md-6 white">
+          <p>6</p>
+        </div>
       </div>
-      <div class="col-xs-6 col-md-6 white">
-        <p>6</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-pink space">
+        <div class="col-xs-6 col-md-6 white">
+          <p>1</p>
+        </div>
+        <div class="col-xs-6 col-md-6 white">
+          <p>2</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-pink space">
-      <div class="col-xs-6 col-md-6 white">
-        <p>1</p>
-      </div>
-      <div class="col-xs-6 col-md-6 white">
-        <p>2</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-purple white space">
-    <p>2015</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>11</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-purple white space">
+      <p>2015</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6">  </div>
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>11</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6">  </div>
+        <div class="col-xs-6 col-md-6 blue space">
+          <p>3</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>3</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2 bg-light-purple white space">
-    <p>2016</p>
-  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-light-blue space">
-      <div class="col-xs-6col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 white">
-        <p>24</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2 bg-light-purple white space">
+      <p>2016</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-light-blue space">
+        <div class="col-xs-6col-md-6">  </div>
+        <div class="col-xs-6 col-md-6 white">
+          <p>24</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row bg-pink space">
+        <div class="col-xs-6 col-md-6">  </div>
+        <div class="col-xs-6 col-md-6 white">
+          <p>4</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row bg-pink space">
-      <div class="col-xs-6 col-md-6">  </div>
-      <div class="col-xs-6 col-md-6 white">
-        <p>4</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table">
-  <div class="col-xs-2 col-md-2">  </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>14</p>
+  <div class="row">
+    <div class="col-xs-2 col-md-2">  </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 blue space">
+          <p class="table-total">14</p>
+        </div>
+        <div class="col-xs-6 col-md-6 blue space">
+          <p class="table-total">41</p>
+        </div>
       </div>
-      <div class="col-xs-6 col-md-6 blue space">
-        <p>41</p>
+    </div>
+    <div class="col-xs-5 col-md-5">
+      <div class="row">
+        <div class="col-xs-6 col-md-6 pink space">
+          <p class="table-total">10</p>
+        </div>
+        <div class="col-xs-6 col-md-6 pink space">
+          <p class="table-total">9</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-5 col-md-5">
-    <div class="row">
-      <div class="col-xs-6 col-md-6 pink space">
-        <p>10</p>
-      </div>
-      <div class="col-xs-6 col-md-6 pink space">
-        <p>9</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="row table white">
-  <div class="col-xs-6 col-md-6 bg-light-blue">
-    <div class="row">
-      <div class="col-xs-4 col-md-4 number">
-        <p>55</p>
+  <div class="row white">
+    <div class="col-xs-6 col-md-6 bg-light-blue">
+      <div class="row center-xs middle-xs">
+        <div class="col-xs-4 col-md-4 number">
+          <p>55</p>
+        </div>
+        <div class="col-xs-8 col-md-8 space">
+          <p>PROYECTOS</p>
+          <p>DE LEY</p>
+        </div>
       </div>
-      <div class="col-xs-8 col-md-8 space">
-        <p>PROYECTOS</p>
-        <p>DE LEY</p>
+    </div>
+    <div class="col-xs-6 col-md-6 bg-pink">
+      <div class="row center-xs middle-xs">
+        <div class="col-xs-4 col-md-4 number">
+          <p>19</p>
+        </div>
+        <div class="col-xs-8 col-md-8 space">
+          <p>LEYES</p>
+          <p>APROBADAS</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-xs-6 col-md-6 bg-pink">
-    <div class="row">
-      <div class="col-xs-4 col-md-4 number">
-        <p>19</p>
-      </div>
-      <div class="col-xs-8 col-md-8 space">
-        <p>LEYES</p>
-        <p>APROBADAS</p>
-      </div>
-    </div>
-  </div>
+
 </div>
