Add @media queries

--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -63,17 +63,19 @@
           </h4>
         </div>
 
-        <p>
-          En la Producción Legislativa podemos decir que el 94,5% de los
-          proyectos fueron debatidos en comisiones.
-        </p>
-        <p>
-          El 84,2% de las leyes que fueron aprobadas pasaron por comisiones. Y
-          el 68% de ellas pasaron por más de una comisión. De las 19 leyes
-          aprobadas, 5 tuvieron coautor, lo cual es un 26,3% de las leyes. Lo
-          cual marca la apertura al diálogo y a sumar a otros bloques al debate,
-          un valor fundamental en la producción legislativa.
-        </p>
+        <div class="content">
+          <p>
+            En la Producción Legislativa podemos decir que el 94,5% de los
+            proyectos fueron debatidos en comisiones.
+          </p>
+          <p>
+            El 84,2% de las leyes que fueron aprobadas pasaron por comisiones. Y
+            el 68% de ellas pasaron por más de una comisión. De las 19 leyes
+            aprobadas, 5 tuvieron coautor, lo cual es un 26,3% de las leyes. Lo
+            cual marca la apertura al diálogo y a sumar a otros bloques al debate,
+            un valor fundamental en la producción legislativa.
+          </p>
+        </div>
       </div>
     </article>
   </div>
