--- a/src/app/management/grid/grid.component.html
+++ b/src/app/management/grid/grid.component.html
@@ -220,8 +220,8 @@
           <p>55</p>
         </div>
         <div class="col-xs-8 col-md-8 space">
-          <p>PROYECTOS</p>
-          <p>DE LEY</p>
+          <p class="number-text">PROYECTOS</p>
+          <p class="number-text">DE LEY</p>
         </div>
       </div>
     </div>
@@ -231,8 +231,8 @@
           <p>19</p>
         </div>
         <div class="col-xs-8 col-md-8 space">
-          <p>LEYES</p>
-          <p>APROBADAS</p>
+          <p class="number-text">LEYES</p>
+          <p class="number-text">APROBADAS</p>
         </div>
       </div>
     </div>
