--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="subtitle-container column flex-1 center-xs full-width">
       <div class="row full-height">
-        <div class="col-xs-offset-2"></div>
+        <div class="col-xs-2"></div>
         <div class="subtitle row middle-xs col-xs-8 col-xs-offset-2 full-height center-xs">
           <h2>SENADOR DE MENDOZA</h2>
         </div>
