--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 @import "../../styles/colors";
+@import "../../styles/responsive";
 
 .header {
   .header-content {
@@ -7,7 +8,10 @@
 
       h1 {
         color: $pink;
-        font-size: 4rem;
+        font-size: 2rem;
+        @include sm {
+          font-size: 4rem;
+        }
       }
     }
 
@@ -19,9 +23,14 @@
 
         h2 {
           color: $white;
-          font-size: 2rem;
+          font-size: 1rem;
           font-weight: bold;
           text-align: center;
+          padding: 1rem 0;
+          @include sm {
+            font-size: 2rem;
+            padding: 0;
+          }
         }
       }
     }
