--- a/src/app/management/circles/circles.component.scss
+++ b/src/app/management/circles/circles.component.scss
@@ -9,8 +9,14 @@
   align-items: center;
   justify-content: center;
   align-content: center;
-  @include sm {
-    padding: 2rem 0;
+  padding: 2rem 0;
+
+  &:first-child {
+    padding-bottom: 0;
+  }
+
+  &:last-child {
+    padding-top: 0;
   }
 
 }
@@ -23,7 +29,7 @@
   align-content: center;
   justify-content: center;
   margin: 10px 0px;
-  
+
   .circle-content{
     text-align: center;
     padding: 0 1rem;
