--- a/src/app/management/grid/grid.component.scss
+++ b/src/app/management/grid/grid.component.scss
@@ -5,18 +5,31 @@
   height: 100%;
   width: 100%;
 }
+
 .table{
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
-  padding: 0 1rem;
+  padding: 2rem 0 0 0;
+
+  @include sm {
+    padding: 0 1rem;
+  }
 
   .table-title {
-    font-size: 1.3rem;
+    font-size: 1rem;
+
+    @include sm {
+      font-size: 1.3rem;
+    }
   }
 
   .table-subtitle {
-    font-size: 1rem;
+    font-size: 0.7rem;
+
+    @include sm {
+      font-size: 1rem;
+    }
   }
 
   .table-total {
@@ -24,10 +37,23 @@
   }
 
   .number{
-    font-size: 3rem;
+    font-size: 2.5rem;
+    @include sm {
+      font-size: 3rem;
+    }
   }
 
-  .space{
-    padding: 1rem 0px;
+  .number-text {
+    font-size: 0.8rem;
+    @include sm {
+      font-size: 1.2rem;
+    }
+  }
+
+  .space {
+    padding: 0.7rem 0;
+    @include sm {
+      padding: 1rem 0;
+    }
   }
 }
